--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=springdemo
 # PostgreSQL DB connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/company
 spring.datasource.username=postgresMaster
-spring.datasource.password=gotPostgresgoGo
+spring.datasource.password=goPostgresGo
 spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA / Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
